creusot/tests/should_fail/recursion/clone_box.stderr
error: Mutually recursive functions: when calling <S as creusot_contracts::Clone>::clone...
    --> clone_box.rs:8:5
     |
8    |     fn clone(&self) -> Self {
     |     ^^^^^^^^^^^^^^^^^^^^^^^
     |
note: then <S as creusot_contracts::Clone>::clone calls <std::boxed::Box<T, A> as creusot_contracts::Clone>::clone...
    --> clone_box.rs:9:29
     |
9    |         let _ = Box::new(S).clone();
     |                             ^^^^^^^
note: finally <std::boxed::Box<T, A> as creusot_contracts::Clone>::clone calls <S as creusot_contracts::Clone>::clone.
    --> /home/arnaud/.rustup/toolchains/nightly-2024-01-31-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/alloc/src/boxed.rs:1301:5
     |
1301 |     fn clone(&self) -> Self {
     |     ^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

